--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a href="#" class="btn">Hire me</a>
         </div>
         <div class="img1">
-            <img src="D:\Project\bg1.png" class="bg-img">"
+            <img src="bg1.png" class="bg-img">"
             <img src="D:\Project\result.png" class="me-img">
     </div>
     <div class="socmed">
