--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         <div class="img1">
             <img src="bg1.png" class="bg-img">"
-            <img src="D:\Project\result.png" class="me-img">
+            <img src="result.png" class="me-img">
     </div>
     <div class="socmed">
         <a href="#"><i class="fab fa-facebook-square"></i></a>
@@ -39,7 +39,7 @@
         <section id="about">
             <h1 class="headings">ABOUT ME</h1>
         <div id="img">
-            <img src="D:\PROJECT\pic2.jpg">
+            <img src="pic2.jpg">
             <div class="intro2">
                 <h2>I'm <span>AILA CHRISHEL,</span></h2>
                 <p>
@@ -61,9 +61,9 @@
             <div class="intro3">
             <p>This is my Sample Portfolio.</p></div>
             <div class="port">
-                <img src="D:\Project\p1.jpg"> 
-                <img src="D:\Project\p2.jpg">
-                <img src="D:\Project\p3.jpg">
+                <img src="p1.jpg"> 
+                <img src="p2.jpg">
+                <img src="p3.jpg">
             </div>
         </section>
         <section id="services">
