--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <h1 class="headings">SERVICES</h1>
             <div class="row">
                 <div class="box">
-                    <img src="D:\Project\design.png">
+                    <img src="design.png">
                     <h1 class="heading">UI & UX Design</h1>
                     <p>As a UI & UX designer, I have the skills
                        and expertise to create meaningful and 
@@ -82,7 +82,7 @@
                     </p>
                 </div>
                 <div class="box">
-                    <img src="D:\Project\coding.png">
+                    <img src="coding.png">
                     <h1 class="heading">Web Development</h1>
                     <p>As a web developer, I have the skills and 
                        expertise to build and maintain functional 
@@ -93,7 +93,7 @@
                     </p>
                 </div>
                 <div class="box">
-                    <img src="D:\Project\app.png">
+                    <img src="app.png">
                     <h1 class="heading">Mobile Development</h1>
                     <p>As a mobile developer, I have the skills and 
                        expertise to design, develop, and maintain mobile
